- Upgrade class transfer format from JSON to binary - Update compiler and assembler to generate class files and an archive file - Remove endpoints for accessing individual elements